--- a/frontend/src/app/admin/roles/roles.component.html
+++ b/frontend/src/app/admin/roles/roles.component.html
@@ -45,6 +45,24 @@
               </ng-container>
             </td>
           </ng-container>
+
+          <ng-container matColumnDef="Sectors">
+            <th class="header role-column" mat-header-cell *matHeaderCellDef>
+              <span>Sectors</span>
+              <!-- <button mat-button class="float-right btn-icon">
+                <mat-icon class="sort-icon" ></mat-icon>
+              </button> -->
+            </th>
+            <td mat-cell *matCellDef="let request">
+              <ng-container *ngIf="request.sectors=='all'">
+                All Sectors
+              </ng-container>
+              <ng-container *ngIf="request.sectors=='limited'">
+                Limited Sectors
+              </ng-container>
+            </td>
+          </ng-container>
+      
           
          
 
@@ -59,6 +77,7 @@
             </th>
             <td mat-cell *matCellDef="let request">
                 <button mat-raised-button class="btn-green" (click)="onUpdateClick(request)"><mat-icon>edit</mat-icon>Update</button>
+                <button mat-raised-button class="btn-red" (click)="onDeleteClick(request)"><mat-icon>delete_outline</mat-icon>Delete</button>
             </td>
           </ng-container>
           
