--- a/frontend/src/app/admin/user-role/user-role.component.html
+++ b/frontend/src/app/admin/user-role/user-role.component.html
@@ -4,6 +4,17 @@
             <label>Role :</label>
             <button mat-button class="matricule">{{data.name}}</button>
         </div>
+
+        <div class="field">
+            <label>Affect Sectors :</label>
+            <mat-form-field>
+                <!-- <mat-label>Id User</mat-label> -->
+                <mat-select placeholder="Select"  panelClass="selectPanel2" [(value)]="sectors" >
+                    <mat-option value="all">All</mat-option>
+                    <mat-option value="limited">Limited</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
     
         <div class="field">
             <label>Permissions :</label>
