--- a/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div *ngIf="confirmMessage==='sync'" >
-		<label> Sync is processing </label>
+		<label> Sync is processing... </label>
 		<mat-progress-bar mode="indeterminate" ></mat-progress-bar>
 	</div>
 </mat-dialog-actions>
