--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -36,7 +36,7 @@
                     </div>
                 </mat-list-item>
     
-                <mat-list-item routerLink="routes" routerLinkActive="active" *ngIf="user.role != 'Admin'">
+                <!-- <mat-list-item routerLink="routes" routerLinkActive="active" *ngIf="user.role != 'Admin'">
                     <mat-icon mat-list-icon>route</mat-icon>
                     <div fxFlex="10"></div>
                     <div *ngIf="sidenavWidth > 6" class="sidenav-item">
@@ -50,7 +50,7 @@
                     <div *ngIf="sidenavWidth> 6" class="sidenav-item">
                         <span>Planning</span>
                     </div>
-                </mat-list-item>
+                </mat-list-item> -->
     
     
                 <mat-list-item routerLink="offline" routerLinkActive="active"  *ngIf="user.role == 'Seller' || user.role == 'Auditor'">
