--- a/frontend/src/app/addclient/addclient.component.css
+++ b/frontend/src/app/addclient/addclient.component.css
@@ -218,6 +218,7 @@
   position: relative;
   text-align: center;
   padding: 5px;
+
 }
 
 .btns{ 
@@ -231,7 +232,7 @@
 }
 
 .btn-red{
-    margin-top: 8px;
+    
     background-color: #af481f;
     color: #fff;
     font-size: 13px;
@@ -265,7 +266,7 @@
     margin: auto;
     font-size: 13px;
     line-height: 30px;
-    width: 130px !important;
+    /* width: 130px !important; */
     border-radius: 20px;
     text-align: center !important;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
@@ -294,6 +295,25 @@
     height: 20px;
     font-size: 12px;
 }
+
+.camera{
+    width: 700px;
+    border-radius: 8px;
+}
+
+.camera-btns{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15px
+}
+
+.img-pdv{
+    width: 700px;
+    border-radius: 10px;
+}
+
 
 /* .NFC-container{
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -543,7 +563,7 @@
     }
     
     .btn-red{
-        margin-top: 8px;
+        
         background-color: #af481f;
         color: #fff;
         font-size: 13px;
@@ -571,7 +591,7 @@
         margin: auto;
         font-size: 13px;
         line-height: 30px;
-        width: 100px !important;
+        /* width: 100px !important; */
         border-radius: 20px;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
@@ -604,6 +624,25 @@
         height: 20px;
         font-size: 10px;
     }
+
+    .camera{
+        width: 700px;
+        border-radius: 8px;
+    }
+
+    .camera-btns{
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        justify-content: center;
+        gap: 15px
+    }
+
+    .img-pdv{
+        width: 700px;
+        border-radius: 10px;
+    }
+    
 
     
 }
@@ -772,7 +811,7 @@
     .map-container{ 
     
         width: 500px;
-        height: 200px;
+        height: 320px;
         /* margin: 20px ; */
         box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
         /* display: flex;
@@ -841,7 +880,7 @@
     }
     
     .btn-red{
-        margin-top: 8px;
+       
         background-color: #af481f;
         color: #fff;
         font-size: 13px;
@@ -869,7 +908,7 @@
         margin: auto;
         font-size: 13px;
         line-height: 30px;
-        width: 100px !important;
+        /* width: 100px !important; */
         border-radius: 20px;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
@@ -901,6 +940,24 @@
         width: fit-content;
         height: 20px;
         font-size: 10px;
+    }
+
+    .camera{
+        width: 500px;
+        border-radius: 8px;
+    }
+
+    .camera-btns{
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        justify-content: center;
+        gap: 15px
+    }
+
+    .img-pdv{
+        width: 450px;
+        border-radius: 10px;
     }
     
 }
@@ -1077,8 +1134,8 @@
     
     .map-container{ 
     
-        width: 300px;
-        height: 100px;
+        width: 350px;
+        height: 200px;
         /* margin: 20px ; */
         box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
         /* display: flex;
@@ -1148,13 +1205,12 @@
     }
     
     .btn-red{
-        margin-top: 8px;
         background-color: #af481f;
         color: #fff;
         font-size: 13px;
         line-height: 30px;
         /* width: 100px !important; */
-        border-radius: 40px;
+        border-radius: 20px;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     }
@@ -1163,10 +1219,10 @@
         margin-top: 8px;
         background-color: #FACF37;
         color: #fff;
-        font-size: 11px;
-        line-height: 20px;
+        font-size: 13px;
+        line-height: 30px;
         /* width: 100px !important; */
-        border-radius: 40px;
+        border-radius: 20px;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     }
@@ -1178,17 +1234,35 @@
     .btn-green{
         background-color: #27AE61;
         color: #fff;
-        font-size: 11px;
-        line-height: 20px;
-        width: 100px !important;
+        font-size: 13px;
+        line-height: 30px;
+        /* width: 100px !important; */
         border-radius: 20px;
-        align-self: flex-start;
+        
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     }
     .btn-green:disabled{
         background-color: #C2BEBE;
         color: #313030;
+    }
+
+    .camera{
+        width: 300px;
+        border-radius: 8px;
+    }
+
+    .camera-btns{
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        justify-content: center;
+        gap: 15px
+    }
+
+    .img-pdv{
+        width: 300px;
+        border-radius: 10px;
     }
 
     
@@ -1371,7 +1445,7 @@
     .map-container{ 
     
         width: 250px;
-        height: 100px;
+        height: 140px;
         /* margin: 20px ; */
         box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
         /* display: flex;
@@ -1431,6 +1505,7 @@
     }
     
     .btns{ 
+        margin-top: 20px;
         display: flex;
         flex-flow: row;
         align-items: center;
@@ -1441,25 +1516,25 @@
     }
     
     .btn-red{
-        margin-top: 8px;
+       
         background-color: #af481f;
         color: #fff;
-        font-size: 13px;
-        line-height: 30px;
+        font-size: 12px;
+        line-height: 25px;
         /* width: 100px !important; */
-        border-radius: 40px;
+        border-radius: 20px;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     }
     
     .btn-yellow{
-        margin-top: 8px;
+        
         background-color: #FACF37;
         color: #fff;
-        font-size: 11px;
-        line-height: 20px;
+        font-size: 12px;
+        line-height: 25px;
         /* width: 100px !important; */
-        border-radius: 40px;
+        border-radius: 20px;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     }
@@ -1469,13 +1544,13 @@
     }
 
     .btn-green{
+        
         background-color: #27AE61;
         color: #fff;
-        font-size: 11px;
-        line-height: 20px;
-        width: 100px !important;
+        font-size: 12px;
+        line-height: 25px;
+        /* width: 100px !important; */
         border-radius: 20px;
-        align-self: flex-start;
         text-align: center !important;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     }
@@ -1492,12 +1567,31 @@
         width: 200px;
         height: 200px;
         border-radius: 8px;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     }
     .camera{
         width: 200px;
         border-radius: 8px;
     }
+
+    .camera-btns{
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        justify-content: center;
+        gap: 15px
+    }
+
+    .img-pdv{
+        width: 250px;
+        border-radius: 10px;
+    }
     
+}
+
+.verify-phone{
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
