--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -23,7 +23,7 @@
 
     <div>
         <button mat-button class="btn-yellow" (click)="showcheck()"
-            [disabled]="(percentage!=100) ||  !Status">Next</button>
+            [disabled]="(percentage!=100) ||  !Status || hide">Next</button>
     </div>
 
     <div class="container" id="checkcodes" *ngIf="hide">
@@ -32,7 +32,8 @@
                 <label class="input-label">Code Centrale Danoune : </label>
                 <div>
                     <button mat-button class="btn-green" [disabled]="test"
-                        (click)="toggleShow(1,qrResultString);">Scan</button>
+                        (click)="toggleShow(1,qrResultString);"
+                        style="align-self: flex-start;">Scan</button>
                     <div *ngFor="let code of ListCodes" class="qr-container">
                         <span *ngIf="code.nbr == 1">{{ code.value}}</span>
                     </div>
@@ -43,7 +44,8 @@
                 <label class="input-label">Code Coca Cola : </label>
                 <div>
                     <button mat-button class="btn-green" [disabled]="test"
-                        (click)="toggleShow(2,qrResultString)">Scan</button>
+                        (click)="toggleShow(2,qrResultString)"
+                        >Scan</button>
                     <div *ngFor="let code of ListCodes" class="qr-container">
                         <span *ngIf="code.nbr == 2">{{code.value}}</span>
                     </div>
@@ -126,13 +128,14 @@
                         </button>
                     </div>
                     <div *ngIf="showNFCWebcam" class="Scan-container">
-                        <webcam [height]="200" [width]="500" [trigger]="triggerObservable"
-                            (imageCapture)="handleNFCImage($event)">
-                        </webcam>
-                        <div class="reas-nfc">
+                        <div class="camera-btns">
                             <button mat-button class="btn-green" (click)="triggerSnapshot();">Click Here</button>
                             <button mat-button class="btn-green" (click)="toggleNFCWebcam();">Close Camera</button>
                         </div>
+                        <webcam [height]="200" [width]="500" [trigger]="triggerObservable"
+                            (imageCapture)="handleNFCImage($event)">
+                        </webcam>
+                        
                     </div>
     
                     <div *ngIf="webcamNFCImage" class="Scan-container">
@@ -185,22 +188,42 @@
                 </div>
 
                 <div class="field">
-                    <mat-form-field>
-                        <mat-label>Phone number*</mat-label>
-                        <input matInput placeholder="+212" [(ngModel)]="PhoneNumber" />
-                    </mat-form-field>
-
-                    <button mat-button class="btn-green" [disabled]="disbale_sms"
-                        (click)="Verify('code'); showVerifCodeInput= true">Verify</button>
-                    {{display}}
+                    <div class="verify-phone">
+                        <div>
+                            <mat-form-field>
+                                <mat-label>Phone number*</mat-label>
+                                <input matInput placeholder="+212" [(ngModel)]="PhoneNumber" />
+                            </mat-form-field>
+        
+                            <button mat-button class="btn-green" [disabled]="disbale_sms"
+                                (click)="Verify('code'); showVerifCodeInput= true">Send Code</button>
+                        </div>
+                        
+                        <p style="font-weight: bold; color: rgb(87, 22, 22);">{{display}}</p>
+                    </div>
+                    
                 </div>
 
                 <div class="field" *ngIf="showVerifCodeInput">
-                    <mat-form-field>
-                        <input matInput placeholder="code SMS" name="codeSMS" [(ngModel)]="codeSMS" />
-                    </mat-form-field>
-                    <button (click)="VerifySMS()">OK</button>
-                    {{status}}
+                    <div class="verify-phone">
+                        <div>
+                            <mat-form-field>
+                                <input matInput placeholder="code SMS" name="codeSMS" [(ngModel)]="codeSMS" />
+                            </mat-form-field>
+                            <button (click)="VerifySMS()" mat-button class="btn-yellow">Verify</button>
+                        </div>
+                        <div>
+                            <p *ngIf="verification_code === codeSMS; else error" style="color: green;">
+                                {{status}}
+                            </p>
+                            <ng-template #error>
+                                <p style="color: red;">{{status}}</p>
+                            </ng-template>
+                            
+                        </div>
+                        
+                    </div>
+                    
                 </div>
                 <div class="field">
                     <mat-label class="input-label">PV photo : </mat-label>
@@ -213,9 +236,9 @@
                     <webcam [height]="200" [width]="500" [trigger]="triggerObservable"
                         (imageCapture)="handlePDVImage($event)">
                     </webcam>
-                    <div class="reas-nfc">
-                        <button mat-button class="btn-green" (click)="triggerSnapshot()">Click Here</button>
-                        <button mat-button class="btn-green" (click)="togglePDVWebcam()">Close Camera</button>
+                    <div class="camera-btns">
+                        <button mat-button class="btn-yellow" (click)="triggerSnapshot()">Click Here</button>
+                        <button mat-button class="btn-yellow" (click)="togglePDVWebcam()">Close Camera</button>
                     </div>
                 </div>
                 <!--          <button class="actionBtn" (click)="triggerSnapshot();">-->
@@ -223,7 +246,7 @@
                 <div *ngIf="webcamPDVImage" class="Scan-container">
 
                     <div class="snapshot">
-                        <img [height]="200" [width]="200" [src]="webcamPDVImage.imageAsDataUrl" />
+                        <img class="img-pdv" [src]="webcamPDVImage.imageAsDataUrl" />
                     </div>
                 </div>
             </div>
@@ -231,7 +254,7 @@
 
         <div class="btns">
             <button mat-button class="btn-red" routerLink="/map">Cancel</button>
-            <button mat-button class="btn-yellow" (click)="Send()">Send</button>    
+            <button mat-button class="btn-yellow" (click)="Send()" [disabled]="ActiveSend()">Send</button>    
         </div>
         
     </div>
