--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -35,7 +35,7 @@
             </mat-form-field>
 
             <mat-form-field >
-              <mat-select placeholder="Sector"  panelClass="selectPanel2" (selectionChange)="onChangeSector($event)" [(ngModel)]="selectedSector">
+              <mat-select placeholder="Sector" panelClass="selectPanel2" (selectionChange)="onChangeSector($event)" [(ngModel)]="selectedSector">
                 <mat-option>
                   <ngx-mat-select-search placeholderLabel="Search" (keyup)="filterListCareUnit($event.target.value)" ></ngx-mat-select-search>
               </mat-option>
@@ -66,7 +66,8 @@
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">{{request.name}}</td>
+
+            <td mat-cell *matCellDef="let request">{{request[0].name}}</td>
           </ng-container>
       
           <ng-container matColumnDef="CIN">
@@ -76,7 +77,7 @@
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">{{request.CIN}}</td>
+            <td mat-cell *matCellDef="let request">{{request[0].CIN}}</td>
           </ng-container>
           
           <ng-container matColumnDef="Phone Number">
@@ -86,7 +87,7 @@
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">{{request.phone}}</td>
+            <td mat-cell *matCellDef="let request">{{request[0].phone}}</td>
           </ng-container>
             
           <ng-container matColumnDef="Email">
@@ -96,7 +97,7 @@
                 <mat-icon class="sort-icon"></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">{{request.email}}</td>
+            <td mat-cell *matCellDef="let request">{{request[0].email}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Role">
@@ -107,7 +108,15 @@
               </button> -->
             </th>
             <td mat-cell *matCellDef="let request">
-              {{request.role}}
+              <!-- {{request.role}} -->
+              <mat-form-field >
+                <mat-select panelClass="selectPanel2" placeholder="See the roles" (selectionChange)="onSelectRole($event.value,request)" [(ngModel)]="selectedRoleTable">
+                    
+                  <mat-option *ngFor="let user of request" [value]="user.role">{{user.role}}</mat-option>
+                 
+                </mat-select>
+              </mat-form-field>
+              
             </td>
           </ng-container>
 
@@ -120,9 +129,15 @@
               </button> -->
             </th>
             <ng-container *matCellDef="let request" >
-              <td mat-cell *ngIf="request.status=='out of work'"><span style="background-color: #AE5827; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
-              <td mat-cell *ngIf="request.status=='Active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
-              <td mat-cell *ngIf="!request.status"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">Active</span></td>
+              <ng-container *ngIf="selectedUser && request.includes(selectedUser.user)">
+                <td mat-cell *ngIf="selectedUser.user.status=='out of work'"><span style="background-color: #AE5827; padding: 3px; color: #fff; border-radius: 3px;">{{selectedUser.user.status}}</span></td>
+                <td mat-cell *ngIf="selectedUser.user.status=='Active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{selectedUser.user.status}}</span></td>
+              </ng-container>
+
+              <ng-container *ngIf="!selectedUser">
+                <td mat-cell><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">Not Defined</span></td>
+              </ng-container>
+              
             </ng-container>
           
           </ng-container>
