--- a/frontend/src/app/client-info/client-info.component.css
+++ b/frontend/src/app/client-info/client-info.component.css
@@ -158,6 +158,7 @@
         display: flex;
         flex-flow: row;
         align-items: center;
+        justify-content: center;
         gap: 10%;
     }
     .btn-green{
@@ -366,6 +367,7 @@
         display: flex;
         flex-flow: row;
         align-items: center;
+        justify-content: center;
         gap: 10%;
     }
     .btn-green{
@@ -373,7 +375,7 @@
         color: #ffff;
         background-color: #27AE61;
         border-radius: 8px;
-        width: 150px;
+        /* width: 150px; */
         line-height: 35px;
     }
     .btn-red{
@@ -381,7 +383,7 @@
         color: #ffff;
         background-color: #AE5827;
         border-radius: 8px;
-        width: 150px;
+        /* width: 150px; */
         line-height: 35px;
     }
     .btn-orange{
@@ -389,7 +391,7 @@
         color: #fff;
         background-color: #FACF37;
         border-radius: 8px;
-        width: 200px;
+        /* width: 200px; */
         line-height: 35px;
     }
     .pdv-info label{
@@ -574,6 +576,7 @@
         display: flex;
         flex-flow: row;
         align-items: center;
+        justify-content: center;
         gap: 10%;
     }
     .btn-green{
@@ -581,7 +584,6 @@
         color: #ffff;
         background-color: #27AE61;
         border-radius: 8px;
-        width: 150px;
         line-height: 35px;
     }
     .btn-red{
@@ -782,7 +784,8 @@
         display: flex;
         flex-flow: row;
         align-items: center;
-        gap: 10%;
+        justify-content: center;
+        gap: 20px;
     }
     .btn-green{
         font-size: 11px;
@@ -991,6 +994,7 @@
         display: flex;
         flex-flow: row;
         align-items: center;
+        justify-content: center;
         gap: 10%;
     }
     .btn-green{
