--- a/frontend/src/app/update-client/update-client.component.html
+++ b/frontend/src/app/update-client/update-client.component.html
@@ -26,7 +26,7 @@
 
     <div>
         <button mat-button class="btn-yellow" (click)="showcheck()"
-            [disabled]="!Status">Next</button>
+            [disabled]="!Status || hide">Next</button>
     </div>
     <ng-template  #showBtn> 
         <button mat-button class="btn-yellow" (click)="WatchPosition()">Recalculate my position</button>
@@ -256,8 +256,11 @@
             </div>
         </div>
 
+        <div class="btns">
+            <button mat-button class="btn-red" routerLink="/map">Cancel</button>
+            <button mat-button class="btn-yellow" (click)="Update()">Update</button>
+        </div>
         
-        <button mat-button class="btn-yellow" (click)="Update()">Update</button>
     </div>
     
     </ng-template>
