map address search/client address/update address

--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -188,6 +188,20 @@
                 </div>
 
                 <div class="field">
+                    <mat-form-field>
+                        <mat-label>Address</mat-label>
+                        <input matInput placeholder="City"  [(ngModel)]="Address.Match_addr" />
+
+                    </mat-form-field>
+                </div>
+                <div class="field">
+                    <mat-form-field>
+                        <mat-label>Region</mat-label>
+                        <input matInput placeholder="Region"  [(ngModel)]="Address.Region"/>
+                    </mat-form-field>
+                </div>
+                
+                <div class="field">
                     <div class="verify-phone">
                         <div>
                             <mat-form-field>
