--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -71,12 +71,14 @@
           </ng-container>
       
           <ng-container matColumnDef="CIN">
+            
             <th class="header cin-column" mat-header-cell *matHeaderCellDef>
               <span>CIN</span>
               <!-- <button mat-button  class="float-right btn-icon">
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
+
             <td mat-cell *matCellDef="let request">{{request[0].CIN}}</td>
           </ng-container>
           
@@ -110,7 +112,7 @@
             <td mat-cell *matCellDef="let request">
               <!-- {{request.role}} -->
               <mat-form-field >
-                <mat-select panelClass="selectPanel2" placeholder="See the roles" (selectionChange)="onSelectRole($event.value,request)" [(ngModel)]="selectedRoleTable">
+                <mat-select panelClass="selectPanel2" placeholder="See the roles" (selectionChange)="onSelectRole($event.value,request)">
                     
                   <mat-option *ngFor="let user of request" [value]="user.role">{{user.role}}</mat-option>
                  
@@ -129,15 +131,16 @@
               </button> -->
             </th>
             <ng-container *matCellDef="let request" >
+
               <ng-container *ngIf="selectedUser && request.includes(selectedUser.user)">
                 <td mat-cell *ngIf="selectedUser.user.status=='out of work'"><span style="background-color: #AE5827; padding: 3px; color: #fff; border-radius: 3px;">{{selectedUser.user.status}}</span></td>
                 <td mat-cell *ngIf="selectedUser.user.status=='Active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{selectedUser.user.status}}</span></td>
               </ng-container>
 
-              <ng-container *ngIf="!selectedUser">
-                <td mat-cell><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">Not Defined</span></td>
+              <ng-container *ngIf="!selectedUser || !request.includes(selectedUser.user)">
+                <td mat-cell><span style="background-color: #b3932b; padding: 3px; color: #fff; border-radius: 3px;">NaN</span></td>
               </ng-container>
-              
+             
             </ng-container>
           
           </ng-container>
@@ -150,14 +153,17 @@
               </button> -->
             </th>
             <td mat-cell *matCellDef="let request">
-                <button mat-icon-button (click)="updateUser(request)" title="Update user"><mat-icon class="valid-icon">edit</mat-icon></button>
-                <button mat-icon-button (click)="deleteUser(request)" title="Delete user" *ngIf="request.status=='Active'">
+              <ng-container *ngIf="selectedUser && request.includes(selectedUser.user)">
+                <button mat-icon-button (click)="updateUser(selectedUser.user)" title="Update user"><mat-icon class="valid-icon">edit</mat-icon></button>
+                <button mat-icon-button (click)="deleteUser(selectedUser.user)" title="Delete user" *ngIf="selectedUser.user.status=='Active'">
                   <mat-icon class="refus-icon" >delete</mat-icon>
                 </button>
-                <button mat-icon-button (click)="restoreUser(request)" title="Bring back this user" *ngIf="request.status=='out of work'">
+                <button mat-icon-button (click)="restoreUser(selectedUser.user)" title="Bring back this user" *ngIf="selectedUser.user.status=='out of work'">
                   <mat-icon class="restore-icon" >restore_from_trash</mat-icon>
                 </button>
-                <button mat-icon-button (click)="viewUserDetails(request)" ><mat-icon class="detail-icon" title="Click to view user details.">remove_red_eye</mat-icon></button>
+                <button mat-icon-button (click)="viewUserDetails(selectedUser.user)" ><mat-icon class="detail-icon" title="Click to view user details.">remove_red_eye</mat-icon></button>
+              </ng-container>
+          
             </td>
           </ng-container>
           
